@@ -1,3 +1,9 @@
+## 0.x.x / 2018-xx-xx
+
+This release breaks Prometheus metrics interface to allow passing a context (used to allow tracing).
+
+* [ENHANCEMENT] Refactor metrics in favor of less metrics but simpler and more meaningful.
+
 ## 0.3.0 / 2018-07-02
 
 This release breaks handler interface to allow passing a context (used to allow tracing).
